--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  background-image: url(../../client/src/components/views/BackgroundImage/bg_iceland.jpg);
+  background-image: url(../../client/src/components/views/BackgroundImage/test.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
@@ -21,8 +21,9 @@ body {
   font-size: 14px;
   line-height: 1.5;
   color: #24292e;
-  background-color: #fff;
+  background-color: black !important;
 }
+
 
 .app {
   flex-direction: column;
@@ -35,6 +36,7 @@ body {
 input.error {
   border-color: red;
 }
+
 
 
 .input-feedback {
@@ -66,6 +68,41 @@ div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
   background-color: rgba(255, 255, 255, 0.25);
   border-radius: 10px;
 }
+
+/* Detail Page properties */
+div.ant-descriptions-title {
+  color: #fff;
+}
+
+div.ant-descriptions-view {
+  background-color: rgba(24,144,255, 0.5);
+  color: #fff !important;
+  border-radius: 10px;
+  border: solid #fff 1.5px;
+}
+
+span.ant-descriptions-item-label, span.ant-descriptions-item-colon {
+  color: #fff !important;
+  font-weight: bold;
+}
+
+span.ant-descriptions-item-content {
+  color: #fff;
+}
+
+/* Year Radio Box Properties  */
+  div.ant-collapse-content, div.ant-collapse-content-active {
+  background-color: rgba(255, 255, 255, 0.25);
+  color: white !important;
+  font-weight: 500;
+
+  }
+
+  span.ant-radio-inner {    
+    background-color: rgba(255, 255, 255, 0.25);
+  } 
+
+
 
 /* All below this field is auto-complete styling */
 /* 
