--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,6 +69,11 @@ div.ant-collapse > .ant-collapse-item > .ant-collapse-header {
   border-radius: 10px;
 }
 
+/* landing page Continents checkbox labels  */
+div.ant-collapse-content-box, label.ant-radio-wrapper {
+  color: black;
+}
+
 /* Detail Page properties */
 div.ant-descriptions-title {
   color: #fff;
@@ -102,16 +107,20 @@ span.ant-descriptions-item-content {
     background-color: rgba(255, 255, 255, 0.25);
   } 
 
-  /* Card properties */
+  /* landing page Card properties */
   div.ant-card-body{
-    background-color: rgba(255, 255, 255, 0.25) !important;
-    padding: 10px;
+    background-color: rgba(24,144,255, 0.75) !important;
+    padding: 10px;    
+  }
+
+  div.ant-card-meta-title, div.ant-card-meta-description {
+    color: white !important;
   }
 
   div.ant-card {background-color: rgba(255, 255, 255, 0.25) !important;}
 
 
-/* All below this field is auto-complete styling */
+/* All below code handles Countries auto-complete styles */
 
 .search-box {
   border: 4px solid transparent;
